Ultima version del scanner proximamente otro proyecto mejorado

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hugodevelopernative.scannerQr"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "67ad4399-3901-4c97-b809-6e4281054f4d"
+      }
     }
   }
 }
